--- a/helloworld/Properties/launchSettings.json
+++ b/helloworld/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
-        "ASPNETCORE_URLS": "https://+:443;http://+:80"
+        "ASPNETCORE_URLS": "https://test.christian-kitte.de/"
       },
       "publishAllPorts": true,
       "useSSL": true
@@ -31,7 +31,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51435",
+      "applicationUrl": "https://test.christian-kitte.de/",
       "sslPort": 44317
     }
   }
